<resources>
    <string name="app_name">Interacti</string>
    <string name="title_text">Google Sign-In</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register"><u>Sign up now!</u></string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="title_activity_maps_new">Map</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="facebook_app_id">759833020854274</string>
    <string name="twitter_consumer_key">85xmxRcs0PsA9F6PvXXRdRwMk</string>
    <string name="twitter_consumer_secret">NA7BYXJ3BlTNGosLeort55x3kUeuUyuLL6EuegopTzqfP6ZkOH</string>
    <string name="linkedin_consumer_key">7523ssry5qk7rl</string>
    <string name="linkedin_consumer_secret">sFyJf0ZW1lp31aGU</string>


    <string name="ev1">Wonderland, Regent Theatre - 10 July</string>
    <string name="ev2">Totally Tina, Victoria Hall - 7 July</string>
    <string name="ev3">The Manalishi, The Sugarmill - 8 July</string>
    <string name="ev4">Breakfast @ The Brewery, Titanic Brewery - 5 July</string>
    <string name="ev5">Phil Hammond, Festival Drayton Centre - 8 July</string>

    <string name="at1">Gladstone Pottery Museum (Longton)</string>
    <string name="at2">Trentham Gardens (Trentham)</string>
    <string name="at3">Trentham Monkey Forest</string>
    <string name="at4">World of Wedgwood (Barlaston)</string>
    <string name="at5">Trentham Shopping Village</string>

    <string name="l1">Britannia Stadium</string>
    <string name="l2">Stoke-on-Trent Railway Station</string>
    <string name="l3">Ford Green Hall</string>
    <string name="l4">Ford Green Hall</string>
    <string name="l5">Brown Edge Village Hall</string>


    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="skip"><u>Skip for now! Sign up later...</u></string>
    <string name="locationPlaceHolder">Stoke-on-Trent, Staffordshire</string>
    <string name="noPointsScanned">You can see your scanned points here but, you haven\'t scanned any points yet.</string>
    <string name="Facebook">Facebook</string>
    <string name="Google">Google</string>
    <string name="orLogin">Or Login via...</string>
    <string name="ForgotPassword"><u>Forgot your password?</u></string>
    <string name="fullName">Full name</string>
    <string name="selectPhoto">Select a photo</string>
    <string name="RecentActivity">Recent Activity</string>
    <string name="myPurchases">My Purchases</string>
    <string name="settings">Settings</string>

</resources>

