<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimary" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="158dp"
        android:layout_height="146dp"
        android:layout_gravity="center_horizontal"
        android:scaleX="0.9"
        android:scaleY="0.9"
        android:layout_marginTop="50dp"
        android:src="@drawable/darkerbluelarger" />

    <LinearLayout
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/bg_login"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:weightSum="1">


        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittextboarder"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/edittextboarder"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <GridLayout
            android:layout_width="288dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:rowCount="2">

            <Button
                android:id="@+id/btnLinkToReset"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:background="@null"
                android:gravity="start"
                android:text="@string/ForgotPassword"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="13dp" />

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_column="4"
                android:layout_gravity="right"
                android:layout_row="0"
                android:background="@null"
                android:gravity="right"
                android:paddingRight="18dp"
                android:text="@string/btn_link_to_register"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="13dp" />

        </GridLayout>


        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:layout_marginTop="15dip"
            android:textColorHint="@color/colorPrimary"
            android:background="@color/colorPrimaryDark"
            android:text="@string/btn_login"
            android:textColor="@color/colorPrimary"/>


        <!-- Link to Login Screen -->

        <TextView
            android:id="@+id/loginvia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/bg_login"
            android:padding="5dp"
            android:text="@string/orLogin"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/input_login_hint" />

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="171dp"
        android:layout_gravity="center"
        android:rowCount="4">


        <Button
            android:id="@+id/googleplus"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="0.29"
            android:background="@drawable/common_google_signin_btn_text_light"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Google"
            android:textAllCaps="false"
            android:textColor="@color/blue_grey_500" />

        <Button
            android:id="@+id/facebook"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_weight="0.29"
            android:background="@drawable/com_facebook_button_login_background"
            android:drawableStart="@drawable/com_facebook_button_login_logo"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/Facebook"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSkip"
            android:layout_width="196dp"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_marginTop="15dp"
            android:layout_row="2"
            android:background="@null"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp" />
    </GridLayout>
</LinearLayout>
