<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="horizontal">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorPrimary"
                        android:orientation="horizontal"
                        android:textAlignment="center"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="0dp"
                            android:paddingTop="0dp"
                            android:text="Recommended For You"
                            android:textColor="@color/colorPrimaryDark"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/uname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>


                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/recom" />


                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="12dp">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/ev1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/ev2"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/ev3"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/ev4"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/ev5"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/imgEvents"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:scaleType="fitStart"
                            app:srcCompat="@drawable/events" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#fff"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="12dp">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/l1"
                                android:textAlignment="textStart"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/l2"
                                android:textAlignment="textStart"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/l3"
                                android:textAlignment="textStart"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="Ceramica"
                                android:textAlignment="textStart"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/l5"
                                android:textAlignment="textStart"
                                android:textSize="18sp" />

                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/imgLandmarks"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:scaleType="fitStart"
                            app:srcCompat="@drawable/landmarks" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#fff"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:padding="12dp">

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/at1"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/at2"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/at3"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/at4"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:paddingTop="10dp"
                                android:text="@string/at5"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/imgAttractions"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:scaleType="fitStart"
                            app:srcCompat="@drawable/attractions" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/bg_main"
                    android:text="Map View"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp" />




            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


        <RelativeLayout
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:gravity="bottom">

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottomNavView_Bar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_above="@id/bottomBar"
                    android:background="@drawable/shadow" />
            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>